--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -13,6 +13,12 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+      - 
+        name: Docker Login
+        uses: docker/login-action@v2.0.0
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PW }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -21,5 +27,13 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
+        name: Build
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        run: |
+          docker buildx build -t “${DOCKER_USER}/bastillion:latest” \
+            --platform linux/amd64 linux/arm64 linux/arm/v7 \
+            --build-arg BASTILLION_VERSION=3.14.0 \
+            --build-arg BASTILLION_FILENAME_VERSION=3.14_00
+            --push .
+      
