--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Docker Login
-        uses: docker/login-action@v2.0.0
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PW }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_DEPLOY_KEY }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
