--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Docker Login
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_DEPLOY_KEY }}
@@ -32,7 +32,7 @@ jobs:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
         run: |
           docker buildx build -t “${DOCKER_USER}/bastillion:latest” \
-            --platform linux/amd64 linux/arm64 linux/arm/v7 \
+            --platform linux/amd64,linux/arm64,linux/arm/v7 \
             --build-arg BASTILLION_VERSION=3.14.0 \
             --build-arg BASTILLION_FILENAME_VERSION=3.14_00 \
             --push .
