--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
         run: |
-          docker buildx build -t “${DOCKER_USER}/bastillion:latest” \
+          docker buildx build -t "${DOCKER_USER}/bastillion:latest" \
             --platform linux/amd64,linux/arm64,linux/arm/v7 \
             --build-arg BASTILLION_VERSION=3.14.0 \
             --build-arg BASTILLION_FILENAME_VERSION=3.14_00 \
