--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -31,9 +31,13 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
+          BASTILLION_VERSION=$(curl -sL https://api.github.com/repos/bastillion-io/Bastillion/releases/latest | jq -r ".tag_name" | cut -d'v' -f2)
+          BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
+          # Fix for 3.14.0
+          if [ $BASTILLION_FILENAME_VERSION -lt 8 ]; then BASTILLION_FILENAME_VERSION=$(echo "$BASTILLION_FILENAME_VERSION"0); fi
           docker buildx build -t "${DOCKER_USER}/bastillion:latest" \
             --platform linux/amd64,linux/arm64,linux/arm/v7 \
-            --build-arg BASTILLION_VERSION=3.14.0 \
-            --build-arg BASTILLION_FILENAME_VERSION=3.14_00 \
+            --build-arg BASTILLION_VERSION=$BASTILLION_VERSION \
+            --build-arg BASTILLION_FILENAME_VERSION=$BASTILLION_FILENAME_VERSION \
             --push .
       
