--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Master
 
 on:
   push:
@@ -40,4 +40,3 @@ jobs:
             --build-arg BASTILLION_VERSION=$BASTILLION_VERSION \
             --build-arg BASTILLION_FILENAME_VERSION=$BASTILLION_FILENAME_VERSION \
             --push .
-      
