--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -38,8 +38,8 @@ jobs:
           BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
           # Fix for 3.14.0
           if [ "${#BASTILLION_FILENAME_VERSION}" -lt 8 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
-          docker buildx build -t "${DOCKER_USER}/bastillion:latest" \
+          docker buildx build -t "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}" \
             --platform linux/amd64,linux/arm64,linux/arm/v7 \
-            --build-arg BASTILLION_VERSION=$BASTILLION_VERSION \
-            --build-arg BASTILLION_FILENAME_VERSION=$BASTILLION_FILENAME_VERSION \
+            --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
+            --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
             --push .
