--- a/.github/workflows/update-base-images.yml
+++ b/.github/workflows/update-base-images.yml
@@ -7,17 +7,25 @@ on:
 
 jobs:
   setup:
-      runs-on: ubuntu-latest
-      outputs:
-        matrix: ${{ steps.matrix.outputs.value }}
-      steps:
-        - 
-          id: matrix
-          run: |
-            tags=$(python -c "import subprocess; import json; s = subprocess.Popen([\"curl -sSlq -X GET https://api.github.com/repos/n-stone/docker-bastillion/git/matching-refs/tags | jq -r '.[].ref' | cut -d'/' -f3 | cut -d'v' -f2\"], shell=True, stdout=subprocess.PIPE).stdout; print(json.dumps(s.read().decode('utf-8').splitlines()))")
-            echo "::set-output name=value::$tags" | sed 's/"/\\"/g'
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.matrix.outputs.TAGS }}
+    steps:
+      - 
+        id: matrix
+        run: |
+          tags=$(python -c "import subprocess; import json; s = subprocess.Popen([\"curl -sSlq -X GET https://api.github.com/repos/n-stone/docker-bastillion/git/matching-refs/tags | jq -r '.[].ref' | cut -d'/' -f3 | cut -d'v' -f2\"], shell=True, stdout=subprocess.PIPE).stdout; print(json.dumps(s.read().decode('utf-8').splitlines()))" | sed 's/"/\\"/g')
+          echo $tags
+          echo "::set-output name=TAGS::$tags"
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - 
+        run: echo ${{needs.setup.outputs.matrix}}
   buildx:
     runs-on: ubuntu-latest
+    needs: setup
     strategy:
       matrix:
         value: ${{fromJson(needs.setup.outputs.matrix)}}
@@ -26,7 +34,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ matrix.value }}
+          ref: ${{ matrix.TAGS }}
       - 
         name: Get the version
         id: get_version
