--- a/.github/workflows/update-base-images.yml
+++ b/.github/workflows/update-base-images.yml
@@ -14,9 +14,9 @@ jobs:
       - 
         id: matrix
         run: |
-          tags=$(python -c "import subprocess; import json; s = subprocess.Popen([\"curl -sSlq -X GET https://api.github.com/repos/n-stone/docker-bastillion/git/matching-refs/tags | jq -r '.[].ref' | cut -d'/' -f3 | cut -d'v' -f2\"], shell=True, stdout=subprocess.PIPE).stdout; print(json.dumps(s.read().decode('utf-8').splitlines()))" | sed 's/"/\\"/g')
+          tags=$(python -c "import subprocess; import json; s = subprocess.Popen([\"curl -sSlq -X GET https://api.github.com/repos/n-stone/docker-bastillion/git/matching-refs/tags | jq -r '.[].ref' | cut -d'/' -f3 | cut -d'v' -f2\"], shell=True, stdout=subprocess.PIPE).stdout; print(json.dumps(s.read().decode('utf-8').splitlines()))")
           echo $tags
-          echo "::set-output name=TAGS::$tags"
+          echo "::set-output name=TAGS::{\"tag\":$tags]}"
   test:
     runs-on: ubuntu-latest
     needs: setup
@@ -27,14 +27,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     strategy:
-      matrix:
-        value: ${{fromJson(needs.setup.outputs.matrix)}}
+      matrix: ${{fromJson(needs.setup.outputs.matrix)}}
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ matrix.TAGS }}
+          ref: ${{ matrix.tag }}
       - 
         name: Get the version
         id: get_version
