--- a/.github/workflows/check-new-realses.yml
+++ b/.github/workflows/check-new-realses.yml
@@ -49,8 +49,8 @@ jobs:
           releases = json.loads(requests.get('https://api.github.com/repos/bastillion-io/Bastillion/releases').content.decode('utf-8'))
           for i in releases:
             if i['name'] == os.getenv('BASTILLION_VERSION'):
-                print('::set-output name=body::' + i['body'])
-          "
+                print(i['body'])
+          " > /tmp/body.txt
       - 
         name: Create Release
         uses: ncipollo/release-action@v1
@@ -59,5 +59,5 @@ jobs:
           tag: ${{ matrix.tag }}
           commit: ${{ env.GITHUB_SHA }}
           token: ${{ secrets.PUSH_TOKEN }}
-          body: ${{ steps.body.outputs.body }}
+          bodyFile: "/tmp/body.txt"
           draft: true
