--- a/.github/workflows/check-new-realses.yml
+++ b/.github/workflows/check-new-realses.yml
@@ -20,7 +20,7 @@ jobs:
           docker_bastillion_releases = json.loads(requests.get('https://api.github.com/repos/n-stone/docker-bastillion/git/matching-refs/tags').content.decode('utf-8'))
           latest_docker_bastillion = [x['ref'].split('/')[-1] for x in docker_bastillion_releases][-1:][0]
           bastillion_releases = json.loads(requests.get('https://api.github.com/repos/bastillion-io/Bastillion/git/matching-refs/tags').content.decode('utf-8'))
-          releases_to_build = ['3.08.00']
+          releases_to_build = []
           for i in bastillion_releases:
               curr_relase = i['ref'].split('/')[-1].replace('v','')
               if version.parse(curr_relase) > version.parse(latest_docker_bastillion):
@@ -60,4 +60,3 @@ jobs:
           commit: ${{ env.GITHUB_SHA }}
           token: ${{ secrets.PUSH_TOKEN }}
           bodyFile: "/tmp/body.txt"
-          draft: true
