--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
-          BASTILLION_VERSION=$(curl -sL https://api.github.com/repos/bastillion-io/Bastillion/releases/latest | jq -r ".tag_name" | cut -d'v' -f2)
+          BASTILLION_VERSION=$(curl -sSLq https://api.github.com/repos/bastillion-io/Bastillion/releases/latest | jq -r ".name")
           BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
           # Fix for 3.14.0
           if [ "${#BASTILLION_FILENAME_VERSION}" -lt 7 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
@@ -64,7 +64,7 @@ jobs:
         env:
           DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
-          BASTILLION_VERSION=$(curl -sL https://api.github.com/repos/bastillion-io/Bastillion/releases/latest | jq -r ".tag_name" | cut -d'v' -f2)
+          BASTILLION_VERSION=$(curl -sSLq https://api.github.com/repos/bastillion-io/Bastillion/releases/latest | jq -r ".name")
           BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
           # Fix for 3.14.0
           if [ "${#BASTILLION_FILENAME_VERSION}" -lt 7 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
