--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -39,6 +39,7 @@ jobs:
             --platform linux/amd64,linux/arm64,linux/arm/v7 \
             --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
             --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} .
+          docker images
       -
         name: Setup tests
         env:
@@ -47,7 +48,7 @@ jobs:
           BASTILLION_VERSION=$(curl -sSLq https://api.github.com/repos/n-stone/docker-bastillion/releases/latest | jq -r ".name")
           docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}-alpine"
           docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb bastillion:${BASTILLION_VERSION}
-          docker exec -u 0 -it bastillion apt install net-tools
+          docker exec -u 0 bastillion apt install net-tools
       -
         name: InSpec Integration Test
         run: |
@@ -99,6 +100,7 @@ jobs:
             --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
             --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
             --file ./Dockerfile.alpine .
+          docker images
       -
         name: Setup tests
         env:
@@ -106,7 +108,7 @@ jobs:
         run: |
           BASTILLION_VERSION=$(curl -sSLq https://api.github.com/repos/n-stone/docker-bastillion/releases/latest | jq -r ".name")
           docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}-alpine"
-          docker exec -u 0 -it bastillion apk --no-cache add net-tools
+          docker exec -u 0 bastillion apk --no-cache add net-tools
       -
         name: InSpec Integration Test
         run: |
