--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -35,23 +35,27 @@ jobs:
           BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
           # Fix for 3.14.0
           if [ "${#BASTILLION_FILENAME_VERSION}" -lt 7 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
-          docker buildx build -t "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}" \
+          docker buildx build -t "${DOCKER_USER}/bastillion:dev" \
             --platform linux/amd64,linux/arm64,linux/arm/v7 \
             --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
-            --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} .
-          docker images
+            --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} 
+            --push .
+  test-ubuntu:
+    runs-on: ubuntu-latest
+    needs: build-ubuntu
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3    
       -
         name: Setup tests
         env:
           DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}        
         run: |
-          BASTILLION_VERSION=$(curl -sSLq https://api.github.com/repos/n-stone/docker-bastillion/releases/latest | jq -r ".name")
-          docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}-alpine"
-          docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb bastillion:${BASTILLION_VERSION}
+          docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion:dev"
           docker exec -u 0 bastillion apt install net-tools
           curl https://omnitruck.chef.io/install.sh | sudo bash -s -- -P inspec
           inspec --chef-license=accept
-          ls -al
       -
         name: InSpec Integration Test
         run: |
@@ -98,23 +102,27 @@ jobs:
           BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
           # Fix for 3.14.0
           if [ "${#BASTILLION_FILENAME_VERSION}" -lt 7 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
-          docker buildx build -t "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}-alpine" \
+          docker buildx build -t "${DOCKER_USER}/bastillion:dev-alpine" \
             --platform linux/amd64,linux/arm64 \
             --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
             --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
-            --file ./Dockerfile.alpine .
-          docker images
+            --file ./Dockerfile.alpine --push .
+  test-alpine:
+    runs-on: ubuntu-latest
+    needs: build-alpine
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
       -
         name: Setup tests
         env:
           DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
-          BASTILLION_VERSION=$(curl -sSLq https://api.github.com/repos/n-stone/docker-bastillion/releases/latest | jq -r ".name")
-          docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}-alpine"
+          docker run -d --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion:dev-alpine"
           docker exec -u 0 bastillion apk --no-cache add net-tools
           curl https://omnitruck.chef.io/install.sh | sudo bash -s -- -P inspec
           inspec --chef-license=accept
-          ls -al
       -
         name: InSpec Integration Test
         run: |
