--- a/.github/workflows/refresh-base-images.yml
+++ b/.github/workflows/refresh-base-images.yml
@@ -20,11 +20,51 @@ jobs:
           tags = [x['ref'].split('/')[-1] for x in docker_bastillion_releases]
           print('::set-output name=TAGS::{"tag":' + json.dumps(tags) + '}')
           "
-  build:
+  build-ubuntu:
     runs-on: ubuntu-latest
     needs: setup
     strategy:
       matrix: ${{fromJson(needs.setup.outputs.matrix)}}
+      max-parallel: 2      
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.tag }}
+      - 
+        name: Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_DEPLOY_KEY }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Build
+        env:
+          BASTILLION_VERSION: ${{ matrix.tag }}
+          DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
+        run: |
+          BASTILLION_FILENAME_VERSION=$(echo $BASTILLION_VERSION | sed -r 's/(.*)\./\1_/')
+          # Fix for 3.14.0
+          if [ "${#BASTILLION_FILENAME_VERSION}" -lt 7 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
+          docker buildx build -t "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}" \
+            --platform linux/amd64,linux/arm64,linux/arm/v7 \
+            --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
+            --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
+            --push .
+  build-alpine:
+    runs-on: ubuntu-latest
+    needs: setup
+    strategy:
+      matrix: ${{fromJson(needs.setup.outputs.matrix)}}
+      max-parallel: 2      
     steps:
       -
         name: Checkout
@@ -58,14 +98,14 @@ jobs:
             --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
             --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
             --push --file ./Dockerfile.alpine .
-          docker buildx build -t "${DOCKER_USER}/bastillion:${BASTILLION_VERSION}" \
-            --platform linux/amd64,linux/arm64,linux/arm/v7 \
-            --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
-            --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
-            --push .
   test-ubuntu:
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+      - setup
+      - build-ubuntu
+    strategy:
+      matrix: ${{fromJson(needs.setup.outputs.matrix)}}
+      max-parallel: 2
     steps:
       -
         name: Checkout
@@ -102,7 +142,12 @@ jobs:
           rm -rf keydb
   test-alpine:
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+      - setup
+      - build-alpine
+    strategy:
+      matrix: ${{fromJson(needs.setup.outputs.matrix)}}
+      max-parallel: 2
     steps:
       -
         name: Checkout
