Fix dockerize on arm

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,3 +1,4 @@
+FROM mietzen/dockerize:latest AS dockerize
 FROM alpine:3.16
 LABEL maintainer="Nils Stein <social.nstein@mailbox.org>"
 
@@ -5,19 +6,18 @@ ARG BASTILLION_VERSION
 ARG BASTILLION_FILENAME_VERSION
 
 ENV BASTILLION_VERSION=${BASTILLION_VERSION} \
-    BASTILLION_FILENAME=${BASTILLION_FILENAME_VERSION} \
-    DOCKERIZE_VERSION=0.6.1
+    BASTILLION_FILENAME=${BASTILLION_FILENAME_VERSION}
 
 RUN apk update && apk upgrade -U -a
 RUN apk --no-cache add openjdk17-jre bash
 
 ADD https://github.com/bastillion-io/Bastillion/releases/download/v${BASTILLION_VERSION}/bastillion-jetty-v${BASTILLION_FILENAME}.tar.gz /tmp/
-ADD https://github.com/jwilder/dockerize/releases/download/v${DOCKERIZE_VERSION}/dockerize-linux-amd64-v${DOCKERIZE_VERSION}.tar.gz /tmp/
+
+COPY --from=dockerize /usr/local/bin/dockerize /usr/local/bin
 
 RUN tar xzf /tmp/bastillion-jetty-v${BASTILLION_FILENAME}.tar.gz -C /opt && \
-    tar xzf /tmp/dockerize-linux-amd64-v${DOCKERIZE_VERSION}.tar.gz -C /usr/local/bin && \
     mv /opt/Bastillion-jetty /opt/bastillion && \
-    rm /tmp/bastillion-jetty-v${BASTILLION_FILENAME}.tar.gz /tmp/dockerize-linux-amd64-v${DOCKERIZE_VERSION}.tar.gz && \
+    rm /tmp/bastillion-jetty-v${BASTILLION_FILENAME}.tar.gz && \
     mkdir /opt/bastillion/jetty/bastillion/WEB-INF/classes/keydb && \
     ln -s /opt/bastillion/jetty/bastillion/WEB-INF/classes/keydb /keydb && \
     rm /opt/bastillion/jetty/bastillion/WEB-INF/classes/BastillionConfig.properties
