--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,4 +1,13 @@
-FROM mietzen/dockerize:latest AS dockerize
+FROM golang:1.17-alpine3.15 AS dockerize
+WORKDIR /go/src/github.com/jwilder/dockerize
+ADD https://github.com/n-stone/dockerize/archive/refs/tags/v0.6.2.tar.gz /tmp/
+RUN tar xzf /tmp/v0.6.2.tar.gz -C /tmp/ && \
+    mv /tmp/dockerize-0.6.2/* /go/src/github.com/jwilder/dockerize/
+
+ENV GO111MODULE=on
+RUN go mod tidy
+RUN go install
+
 FROM alpine:3.16
 LABEL maintainer="Nils Stein <social.nstein@mailbox.org>"
 
@@ -13,7 +22,7 @@ RUN apk --no-cache add openjdk17-jre bash
 
 ADD https://github.com/bastillion-io/Bastillion/releases/download/v${BASTILLION_VERSION}/bastillion-jetty-v${BASTILLION_FILENAME}.tar.gz /tmp/
 
-COPY --from=dockerize /usr/local/bin/dockerize /usr/local/bin
+COPY --from=dockerize /go/bin/dockerize /usr/local/bin
 
 RUN tar xzf /tmp/bastillion-jetty-v${BASTILLION_FILENAME}.tar.gz -C /opt && \
     mv /opt/Bastillion-jetty /opt/bastillion && \
